--- a/Accounts/signup.html
+++ b/Accounts/signup.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../styles.css" />
-        <title>Sign In - Scutoid</title>
+        <title>Sign Up - Scutoid</title>
     </head>
     <body>
         <div id="navbar">
@@ -13,26 +13,31 @@
             <a href="../about.html">AI</a>
             <a href="../contact.html">Contact</a>
         </div>
-        <h1>Sign In</h1>
-        <script src="cookies.js"></script>
-        <div id="error-message" style="color: red; display: none;">Invalid username or password</div>
-        <form id="sign_in" action="signin.php" method="POST">
+        <h1>Create Account</h1>
+        
+        <div id="error-message" style="color: red; display: none;">Error creating account</div>
+        <form id="sign_up" action="signup.php" method="POST">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required />
+            <br />
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
             <br />
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required />
             <br />
-            <button id="signinbutton" type="submit">Sign In</button>
+            <button id="signupbutton" type="submit">Sign Up</button>
         </form>
         <script>
             // Check for error query parameter
             const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.get('error') === 'invalid_credentials') {
-                document.getElementById('error-message').style.display = 'block';
+            if (urlParams.get('error')) {
+                const errorDiv = document.getElementById('error-message');
+                errorDiv.style.display = 'block';
+                errorDiv.innerText = urlParams.get('error') === 'exists' ? 'Username already exists' : 'Error creating account';
             }
         </script>
 
-        <button>Don't have an account?</button>
+        <a href="signin.html"><button>Already have an account?</button></a>
     </body>
 </html>
