--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
         <title>Scutoid</title>
+        <!-- Navbar Injection -->
+        <script src="components/navbar.js" defer></script>
     </head>
-    <body>
-        <div id="navbar">
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="about.html">AI</a>
-            <a href="contact.html">Contact</a>
+    <body style="padding-top: 64px;"> <!-- Add padding for fixed navbar -->
+        <div id="navbar-placeholder"></div>
+        
+        <div id="carosel">
+            <img src="https://placehold.co/1200x400?text=Scutoid+Banner&font=roboto" alt="Scutoid Banner" />
+            
         </div>
         <h1>Scutoid</h1>
         <p>App developer and AI Engineer</p>
 
         <br><br>
 
-        <card>
+        <card class="card">
             <h2>Muse</h2>
             <p>A music app for local files</p>
             <img src="https://placehold.co/800?text=Muse+Screenshot&font=roboto" alt="Muse App">
