--- a/AI/aiview.html
+++ b/AI/aiview.html
@@ -11,6 +11,17 @@
     <!-- Navbar Injection -->
     <script src="../components/navbar.js" defer></script>
     <script src="../Accounts/cookies.js" defer></script>
+    <!-- Add this in the <head> section of your main chat page -->
+<script src="../Accounts/cookies.js"></script>
+
+<!-- Make sure your navbar has the id="navbar" -->
+<div id="navbar">
+    <a href="../index.html">Home</a>
+    <a href="../projects.html">Projects</a>
+    <a href="../about.html">AI</a>
+    <a href="../contact.html">Contact</a>
+    <a href="../Accounts/signin.html" id="signin-link">Sign In</a>
+</div>
 </head>
 <body>
     <!-- Navbar Placeholder -->
