--- a/Accounts/signin.html
+++ b/Accounts/signin.html
@@ -5,6 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../styles.css" />
         <title>Sign In - Scutoid</title>
+
+        <style>
+            textarea {
+                width: 300px;
+                height: 100px;
+            }
+            align-items: center;
+            justify-content: center;
+
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        </style>
+
     </head>
     <body>
         <div id="navbar">
