started working on my first blog post.

--- a/projects/projectview.html
+++ b/projects/projectview.html
@@ -7,5 +7,10 @@
         <title>Projects | Scutoid</title>
         </head>
         <body>
+        <div id="navbar">
+            <a href="../index.html">Home</a>
+            <a href="../projects.html">Projects</a>
+            <a href="../about.html">AI</a>
+            <a href="../contact.html">Contact</a>
         </body>
 </html>
