feat: Implement collapsible thinking sections for AI responses using `<think>` and `<thinking>` tags, and add new AI model prompts.

--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
     </head>
     <body style="padding-top: 64px;"> <!-- Add padding for fixed navbar -->
         <div id="navbar-placeholder"></div>
-        
-        <div id="carosel">
-            <img src="https://placehold.co/1200x400?text=Scutoid+Banner&font=roboto" alt="Scutoid Banner" />
-            
-        </div>
+
         <h1>Scutoid</h1>
         <p>App developer and AI Engineer</p>
 
         <br><br>
 
-        <card class="card">
+        <div class="card">
             <h2>Muse</h2>
             <p>A music app for local files</p>
             <img src="https://placehold.co/800?text=Muse+Screenshot&font=roboto" alt="Muse App">
-        </card>
+        </div>
         <footer>
             <p>&copy; 2024 Scutoid. All rights reserved.</p>
         </footer>
