--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="navbar-placeholder"></div>
 
     <!-- 3D Canvas Background -->
-    <canvas id="three-canvas"></canvas>
+
 
     <!-- Hero Section -->
     <section class="hero" id="hero">
@@ -146,14 +146,9 @@
 
             <!-- More Projects Coming -->
             <article class="project-card coming-soon" id="project-upcoming">
-                <div class="card-content">
-                    <div class="coming-soon-content">
-                        <h3 class="project-title">I'm broke, please disable your adblocker</h3>
-                        <div id="frame" style="width: 160px;margin: auto;z-index: 99998;height: auto">
-                            <iframe data-aa='2425504' src='//ad.a-ads.com/2425504/?size=160x600'
-                                style='border:0; padding:0; width:160px; height:600px; overflow:hidden;display: block;margin: auto'></iframe>
-                        </div>
-                    </div>
+                <div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
+                    <iframe data-aa='2425504' src='//acceptable.a-ads.com/2425504/?size=Adaptive'
+                        style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
                 </div>
             </article>
         </div>
@@ -186,7 +181,7 @@
     </footer>
 
     <!-- Three.js for 3D Background -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
     <script src="scripts.js"></script>
 </body>
 
