--- a/index.html
+++ b/index.html
@@ -2,187 +2,121 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description"
-        content="Scutoid - App Developer and AI Engineer. Creating innovative digital experiences." />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Scutoid - App Developer and AI Engineer.">
     <title>Scutoid</title>
 
-    <!-- Google Fonts -->
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles.css" />
-
-    <!-- Navbar Injection -->
-    <script src="components/navbar.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div id="navbar-placeholder"></div>
 
-    <!-- 3D Canvas Background -->
+    <!-- Navbar -->
+    <nav class="navbar">
+        <a href="#" class="logo">Scutoid</a>
+        <div class="nav-links">
+            <a href="#" class="nav-link">Projects</a>
+            <a href="https://github.com/scutoid" target="_blank" class="nav-link">GitHub</a>
+            <a href="mailto:support@scutoid.top" class="nav-link contact-btn">Contact</a>
+        </div>
+    </nav>
 
+    <main>
+        <!-- Hero Section -->
+        <section class="hero">
+            <h1>Hey, I'm Scutoid.</h1>
+            <p>App Developer & AI Engineer crafting digital experiences.</p>
+        </section>
 
-    <!-- Hero Section -->
-    <section class="hero" id="hero">
-        <div class="hero-content">
-            <div class="hero-badge">
-                <span class="badge-dot"></span>
-                Available for Projects
-            </div>
-            <h1 class="hero-title">
-                <span class="title-name">Scutoid</span>
-            </h1>
-            <p class="hero-subtitle">
-                App Developer who makes
-                <span class="typed-text">random shi&mdash;</span>
-            </p>
-            <div class="hero-cta">
-                <a href="#projects" class="btn btn-primary">
-                    <span>View Projects</span>
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M5 12h14M12 5l7 7-7 7" />
+        <!-- Bento Grid -->
+        <section class="bento-grid">
+
+            <!-- Project 1: Muse (Span 2) -->
+            <a href="#" class="card span-2 project-muse">
+                <div class="card-image">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M9 18V5l12-2v13"></path>
+                        <circle cx="6" cy="18" r="3"></circle>
+                        <circle cx="18" cy="16" r="3"></circle>
                     </svg>
-                </a>
-                <a href="#contact" class="btn btn-secondary">Email</a>
-            </div>
-        </div>
-        <div class="scroll-indicator">
-            <div class="mouse">
-                <div class="wheel"></div>
-            </div>
-            <span>Scroll to explore</span>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section class="projects-section" id="projects">
-        <div class="section-header">
-            <span class="section-tag">Portfolio</span>
-            <h2 class="section-title"> Projects</h2>
-        </div>
-
-        <div class="projects-grid">
-            <!-- Project Card 1 -->
-            <article class="project-card" id="project-muse">
-                <div class="card-glow"></div>
-                <div class="card-content">
-                    <div class="card-header">
-                        <span class="project-category">Music App</span>
-                        <div class="project-links">
-                            <a href="#" class="project-link" aria-label="View source">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2">
-                                    <path
-                                        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
-                                </svg>
-                            </a>
-                            <a href="#" class="project-link" aria-label="View live">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2">
-                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
-                                    <polyline points="15 3 21 3 21 9" />
-                                    <line x1="10" y1="14" x2="21" y2="3" />
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <h3 class="project-title">Muse</h3>
-                    <p class="project-desc">A simple music player for local files.</p>
-                    <div class="project-image">
-                        <div class="image-placeholder">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                stroke-width="1.5">
-                                <circle cx="12" cy="12" r="10" />
-                                <polygon points="10 8 16 12 10 16 10 8" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="project-tech">
-                        <span class="tech-tag">Python</span>
-                    </div>
                 </div>
-            </article>
-
-            <!-- Project Card 2 -->
-            <article class="project-card" id="project-ai">
-                <div class="card-glow"></div>
-                <div class="card-content">
-                    <div class="card-header">
-                        <span class="project-category">AI</span>
-                        <div class="project-links">
-                            <a href="AI/aiview.html" class="project-link" aria-label="View live">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2">
-                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
-                                    <polyline points="15 3 21 3 21 9" />
-                                    <line x1="10" y1="14" x2="21" y2="3" />
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <h3 class="project-title">Starry</h3>
-                    <p class="project-desc">AI Chatbot</p>
-                    <div class="project-image">
-                        <div class="image-placeholder ai-gradient">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                stroke-width="1.5">
-                                <path
-                                    d="M12 2a2 2 0 0 1 2 2c0 .74-.4 1.39-1 1.73V7h1a7 7 0 0 1 7 7h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h1a7 7 0 0 1 7-7h1V5.73c-.6-.34-1-.99-1-1.73a2 2 0 0 1 2-2z" />
-                                <circle cx="7.5" cy="14.5" r="1.5" />
-                                <circle cx="16.5" cy="14.5" r="1.5" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="project-tech">
-                        <span class="tech-tag">LLMs</span>
-                    </div>
+                <h3 class="card-title">Muse</h3>
+                <p class="card-desc">A simple music player for local files. Built for simplicity and performance.</p>
+                <div class="tech-stack">
+                    <span class="tag">Python</span>
+                    <span class="tag">Audio</span>
                 </div>
-            </article>
-
-            <!-- More Projects Coming -->
-            <article class="project-card coming-soon" id="project-upcoming">
-                <div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
-                    <iframe data-aa='2425504' src='//acceptable.a-ads.com/2425504/?size=Adaptive'
-                        style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
-                </div>
-            </article>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact-section" id="contact">
-        <div class="contact-content">
-            <span class="section-tag">Contact</span>
-            <h2 class="section-title">Give me mails</h2>
-            <p class="section-desc">Have a project in mind? I'd love not credit you.</p>
-            <a href="mailto:support@scutoid.top" class="btn btn-primary btn-large">
-                <span>Start a Conversation</span>
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
-                    <polyline points="22,6 12,13 2,6" />
-                </svg>
             </a>
-        </div>
-    </section>
 
-    <!-- Footer -->
-    <footer class="main-footer">
-        <div class="footer-content">
-            <p>&copy; 2026 Scutoid. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="#">Anti-Hero Productions</a>
+            <!-- Tech Stack (Span 1) -->
+            <div class="card">
+                <div class="card-icon">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="16 18 22 12 16 6"></polyline>
+                        <polyline points="8 6 2 12 8 18"></polyline>
+                    </svg>
+                </div>
+                <h3 class="card-title">Stack</h3>
+                <p class="card-desc">Rust, Python, TypeScript, React.</p>
             </div>
-        </div>
+
+            <!-- Social/Link (Span 1) -->
+            <a href="https://github.com" target="_blank" class="card">
+                <div class="card-icon">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path
+                            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                        </path>
+                    </svg>
+                </div>
+                <h3 class="card-title">GitHub</h3>
+                <p class="card-desc">Check out my code.</p>
+            </a>
+
+            <!-- Project 2: Starry (Span 2) -->
+            <a href="AI/aiview.html" class="card span-2 project-starry">
+                <div class="card-image">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                    </svg>
+                </div>
+                <h3 class="card-title">Starry</h3>
+                <p class="card-desc">AI Chatbot leveraging modern LLMs for natural conversation.</p>
+                <div class="tech-stack">
+                    <span class="tag">AI</span>
+                    <span class="tag">LLM</span>
+                </div>
+            </a>
+
+            <!-- Ad Card (Span 2) -->
+            <div class="card span-2 ad-card">
+                <div id="frame"
+                    style="width: 100%; height: 100%; display:flex; align-items:center; justify-content:center;">
+                    <iframe data-aa='2425504' src='https://acceptable.a-ads.com/2425504/?size=Adaptive'
+                        style='border:0; padding:0; width:100%; height:100%; min-height: 200px; overflow:hidden; display: block;'></iframe>
+                </div>
+            </div>
+
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2026 Scutoid. All rights reserved.</p>
+        <p style="margin-top: 8px; font-size: 0.8rem; opacity: 0.5;">Inspired by shlokvaidya.vercel.app</p>
     </footer>
 
-    <!-- Three.js for 3D Background -->
-
-    <script src="scripts.js"></script>
+    <!-- Minimal script for interactions if needed, currently none -->
+    <script>
+        // Optional: Add simple console log or analytics
+        console.log("Scutoid Portfolio Loaded");
+    </script>
 </body>
 
 </html>
