--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
     <nav class="navbar">
         <a href="#" class="logo">Scutoid</a>
         <div class="nav-links">
-            <a href="#" class="nav-link">Projects</a>
-            <a href="https://github.com/scutoid" target="_blank" class="nav-link">GitHub</a>
-            <a href="mailto:support@scutoid.top" class="nav-link contact-btn">Contact</a>
+            <a href="https://scutoid.top/blog/mainpage.html" target="_blank" class="nav-link">Blog</a>
+            <a href="mailto:support@scutoid.top" class="nav-link">Contact</a>
         </div>
     </nav>
 
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <h1>Hey, I'm Scutoid.</h1>
-            <p>App Developer & AI Engineer crafting digital experiences.</p>
+            <h1>Scutoid</h1>
+            <p>App Developer</p>
         </section>
 
         <!-- Bento Grid -->
@@ -48,7 +47,7 @@
                     </svg>
                 </div>
                 <h3 class="card-title">Muse</h3>
-                <p class="card-desc">A simple music player for local files. Built for simplicity and performance.</p>
+                <p class="card-desc">A simple music player for local files.</p>
                 <div class="tech-stack">
                     <span class="tag">Python</span>
                     <span class="tag">Audio</span>
@@ -64,11 +63,11 @@
                     </svg>
                 </div>
                 <h3 class="card-title">Stack</h3>
-                <p class="card-desc">Rust, Python, TypeScript, React.</p>
+                <p class="card-desc">Rust, Python, HTML</p>
             </div>
 
             <!-- Social/Link (Span 1) -->
-            <a href="https://github.com" target="_blank" class="card">
+            <a href="https://github.com/scutoidzz" target="_blank" class="card">
                 <div class="card-icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path
@@ -88,7 +87,7 @@
                     </svg>
                 </div>
                 <h3 class="card-title">Starry</h3>
-                <p class="card-desc">AI Chatbot leveraging modern LLMs for natural conversation.</p>
+                <p class="card-desc">AI Chat</p>
                 <div class="tech-stack">
                     <span class="tag">AI</span>
                     <span class="tag">LLM</span>
@@ -109,7 +108,6 @@
 
     <footer>
         <p>&copy; 2026 Scutoid. All rights reserved.</p>
-        <p style="margin-top: 8px; font-size: 0.8rem; opacity: 0.5;">Inspired by shlokvaidya.vercel.app</p>
     </footer>
 
     <!-- Minimal script for interactions if needed, currently none -->
