--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
         <a href="#" class="logo">Scutoid</a>
         <div class="nav-links">
-            <a href="https://scutoid.top/blog/mainpage.html" target="_blank" class="nav-link">Blog</a>
+            <a href="blog/mainpage.html" class="nav-link">Blog</a>
             <a href="mailto:support@scutoid.top" class="nav-link">Contact</a>
         </div>
     </nav>
@@ -110,9 +110,7 @@
         <p>&copy; 2026 Scutoid. All rights reserved.</p>
     </footer>
 
-    <!-- Minimal script for interactions if needed, currently none -->
     <script>
-        // Optional: Add simple console log or analytics
         console.log("Scutoid Portfolio Loaded");
     </script>
 </body>
