--- a/AI/aiview.html
+++ b/AI/aiview.html
@@ -17,136 +17,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="../components/navbar.js" defer></script>
     <script src="../Accounts/cookies.js" defer></script>
-    <style>
-        /* Override AI Styling for Consistency */
-        body {
-            font-family: var(--font-main) !important;
-            background-color: var(--bg-color);
-        }
-
-        /* Ensure Navbar sits on top */
-        .navbar {
-            top: 20px;
-            width: auto;
-            max-width: 90%;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        /* Adjust App Layout for Fixed Navbar */
-        .app-layout {
-            height: 100vh !important;
-            padding-top: 80px;
-            /* Space for navbar */
-            box-sizing: border-box;
-        }
-
-        .sidebar {
-            height: 100%;
-            border-top-right-radius: 12px;
-        }
-
-        .main-content {
-            border-top-left-radius: 12px;
-        }
-
-        /* Thinking Styles from previous */
-        .thinking-section {
-            background: rgba(100, 100, 255, 0.05);
-            border-left: 3px solid rgba(100, 100, 255, 0.3);
-            border-radius: 8px;
-            margin: 12px 0;
-            overflow: hidden;
-        }
-
-        .thinking-header {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            padding: 10px 14px;
-            cursor: pointer;
-            user-select: none;
-            font-size: 0.9em;
-            color: #666;
-            font-weight: 500;
-        }
-
-        [data-theme="dark"] .thinking-header {
-            color: #999;
-        }
-
-        .thinking-header:hover {
-            background: rgba(100, 100, 255, 0.05);
-        }
-
-        .thinking-icon {
-            transition: transform 0.2s;
-            font-size: 12px;
-        }
-
-        .thinking-section.collapsed .thinking-icon {
-            transform: rotate(-90deg);
-        }
-
-        .thinking-content {
-            padding: 0 14px 14px 14px;
-            font-size: 0.9em;
-            color: #555;
-            line-height: 1.6;
-        }
-
-        [data-theme="dark"] .thinking-content {
-            color: #aaa;
-        }
-
-        .thinking-section.collapsed .thinking-content {
-            display: none;
-        }
-
-        .thinking-badge {
-            display: inline-flex;
-            align-items: center;
-            gap: 6px;
-            padding: 4px 10px;
-            background: rgba(100, 100, 255, 0.1);
-            border-radius: 12px;
-            font-size: 0.85em;
-            color: #5555ff;
-            margin-bottom: 8px;
-        }
-
-        .thinking-spinner {
-            width: 12px;
-            height: 12px;
-            border: 2px solid rgba(100, 100, 255, 0.3);
-            border-top-color: #5555ff;
-            border-radius: 50%;
-            animation: spin 0.8s linear infinite;
-        }
-
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
-</head>
-
-<body data-theme="dark">
-    <!-- Navbar -->
-    <nav class="navbar">
-        <a href="../index.html" class="logo">Scutoid</a>
-        <div class="nav-links">
-            <a href="../blog/mainpage.html" class="nav-link">Blog</a>
-            <a href="../projects.html" class="nav-link">Projects</a>
-            <a href="../contact.html" class="nav-link">Contact</a>
-            <a href="../Accounts/signin.html" class="nav-link contact-btn">Sign In</a>
-        </div>
-    </nav>
     <!-- Navbar Placeholder -->
     <div id="navbar-placeholder"></div>
 
-    <div class="app-layout" style="margin-top: 64px; height: calc(100vh - 64px);">
+
+    <div class="app-layout">
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
@@ -282,6 +157,6 @@
         // Thinking tag processing is now handled by ai.js
         // The function supports both <think> and <thinking> tag formats
     </script>
-</body>
+    </body>
 
 </html>
